# BuriedPeaceRustWeb

./: Cargo.toml
docs/: sdd.html  sdd.md  srs.md  todo.md
docs/sdd/: 1. overview.md  2. game.md  3. engine.md
src/: lib.rs
src/engine/: input.rs  mod.rs  output.rs  player.rs  world.rs
src/engine/common/data/: mod.rs  spaced_vec.rs  type_map.rs
src/engine_old/: app.rs  engine.rs  input.rs  mod.rs  web_page_helper.rs
src/engine_old/data/: float_vec.rs  id_map.rs  kind_map.rs  mod.rs
src/engine_old/realm/: mod.rs
src/engine_old/realm/adj/: mod.rs
src/engine_old/realm/verb/: mod.rs
src/engine_old/visual/: material.rs  mesh.rs  mod.rs  shader.rs  visible_object.rs
