[package]
name = "BuriedPeace"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.76"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lazy_static = "1.4.0"
nalgebra-glm = "0.15.0"
wee_alloc = "0.4.5"
mopa = "0.2.2"
downcast-rs = "1.2.0"

[dependencies.web-sys]
version = "0.3.53"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window'
]